:arrow_up: Align with v3.7

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,16 @@
 {
-  "presets": ["env"],
-  "plugins": ["transform-remove-strict-mode", "transform-object-rest-spread"]
+  "presets": [
+    [
+      "env",
+      {
+        "exclude": [
+          "transform-regenerator"
+        ]
+      }
+    ]
+  ],
+  "plugins": [
+    "transform-remove-strict-mode",
+    "transform-object-rest-spread"
+  ]
 }
