--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openrouteservice",
-  "version": "3.7.0",
+  "version": "3.7.0-beta.0",
   "description": "",
   "main": "index.js",
   "scripts": {
