--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "3.7.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "watch": "gulp watch",
-    "build": "gulp default"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC"
